// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<li>
  <strong>
    Some work
  </strong>
</li>
`;

exports[`matches snapshot with GitHub repo 1`] = `
<li>
  <strong>
    Angular-Gulp-Boilerplate
  </strong>
   
  /
   
  <Link
    href="https://github.com/loginov-rocks/Angular-Gulp-Boilerplate"
  >
    GitHub
  </Link>
</li>
`;
